modified:   data/acino/DataPruning.ipynb

--- a/data/acino/DataPruning.ipynb
+++ b/data/acino/DataPruning.ipynb
@@ -10,34 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "60a2fa4b-c7e5-4b6d-a0c9-5c73aa0e64c3",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10_12_2017JulesFlick2_1CAM8\n",
-      "09_03_2019LilyFlick1CAM5\n",
-      "03_03_2019MenyaRun1CAM1\n",
-      "16_12_2017CetaneFlick2CAM8\n",
-      "Cheetah1Flick1CAM7\n",
-      "Cheetah1Flick1CAM6\n",
-      "07_03_2019PhantomFlick1CAM6\n",
-      "07_03_2019PhantomRun1CAM3\n",
-      "10_12_2017JulesFlick1_1CAM1\n",
-      "03_03_2019PhantomFlick1CAM2\n",
-      "05_03_2019LilyRun1CAM5\n",
-      "21_12_2017JulesFlick1_1CAM5\n",
-      "03_03_2019PhantomFlick1CAM6\n",
-      "09_12_2017JulesRun1CAM1\n",
-      "Cheetah2Flick1_1CAM2\n",
-      "10_12_2017ZorroFlick2CAM7\n",
-      "9_12_2017JulesRun1CAM6\n",
-      "17_12_2017JulesFlick2CAM10\n",
-      "21_12_2017JulesFlick2_2CAM10\n",
-      "07_03_2019MenyaFlick1CAM1\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/notebooks/../ap10k/data/'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\julia\\mmpose\\data\\acino\\DataPruning.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/c%3A/Users/julia/mmpose/data/acino/DataPruning.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mPIL\u001b[39;00m \u001b[39mimport\u001b[39;00m Image\n\u001b[1;32m      <a href='vscode-notebook-cell:/c%3A/Users/julia/mmpose/data/acino/DataPruning.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m acino\u001b[39m=\u001b[39mos\u001b[39m.\u001b[39mgetcwd()  \u001b[39m# /notebooks/data/acino\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/c%3A/Users/julia/mmpose/data/acino/DataPruning.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m img_ids\u001b[39m=\u001b[39m[os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msplitext(img)[\u001b[39m0\u001b[39m] \u001b[39mfor\u001b[39;00m img \u001b[39min\u001b[39;00m os\u001b[39m.\u001b[39;49mlistdir(acino\u001b[39m+\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m/../ap10k/data/\u001b[39;49m\u001b[39m'\u001b[39;49m)]\n\u001b[1;32m      <a href='vscode-notebook-cell:/c%3A/Users/julia/mmpose/data/acino/DataPruning.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m img_ids\u001b[39m.\u001b[39mremove(\u001b[39m'\u001b[39m\u001b[39m.ipynb_checkpoints\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/c%3A/Users/julia/mmpose/data/acino/DataPruning.ipynb#W1sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m img_ids\u001b[39m=\u001b[39m[\u001b[39mint\u001b[39m(i) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m img_ids]\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/notebooks/../ap10k/data/'"
      ]
     }
    ],
