--- a/Train.ipynb
+++ b/Train.ipynb
@@ -4583,7 +4583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a0032793-06fc-4319-9c8e-ec9b995f7f87",
    "metadata": {},
    "outputs": [
@@ -4596,7 +4596,7 @@
       "creating index...\n",
       "index created!\n",
       "load checkpoint from local path: work_dirs/hrnet_w32_acino_256x256/latest.pth\n",
-      "[>>>>>>>>>>>>>>>>>                  ] 1/2, 1.7 task/s, elapsed: 1s, ETA:     1s"
+      "[>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>] 2/2, 1.9 task/s, elapsed: 1s, ETA:     0s\n"
      ]
     }
    ],
@@ -4665,7 +4665,7 @@
     "  \n",
     "  os.makedirs('vis_result', exist_ok=True)\n",
     "  out_file = os.path.join('vis_result', f'vis_as{image_id}.jpg')\n",
-    "  vis_result=vis_pose_result(pose_model,image_name,pose_results,radius=2,thickness=1,out_file=out_file)\n",
+    "  vis_result=vis_pose_result(pose_model,image_name,pose_results,radius=4,thickness=2,out_file=out_file)\n",
     "  "
    ]
   }
