modi/fied:   data/acino/annotations/Annotate.ipynb

--- a/data/acino/annotations/Annotate.ipynb
+++ b/data/acino/annotations/Annotate.ipynb
@@ -45,7 +45,7 @@
     "        y_min=height-1\n",
     "        y_max=1\n",
     "\n",
-    "        for j in range(1,len(df.columns),2):\n",
+    "        for j in range(1,len(df.columns),2): # range(1,55) for \n",
     "            if pd.isnull(df.iloc[i,j]): #NaN values\n",
     "                kp.append(0)\n",
     "                kp.append(0)\n",
@@ -76,7 +76,7 @@
     "        a=w*h # Bbox area\n",
     "        \n",
     "        #Padded bounding box (5 pixels all sides):\n",
-    "        bbox=[x_min-5,y_min-5,w+10,h+10] # xywh format NB! y_min==top left corner\n",
+    "        bbox=[x_min-10,y_min-10,w+20,h+20] # xywh format NB! y_min==top left corner\n",
     "        \n",
     "#         if not kp[-1]==0: # Tip of tail != NaN\n",
     "#             num_kp-=1 \n",
