--- a/AnimalPose.ipynb
+++ b/AnimalPose.ipynb
@@ -7508,7 +7508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "0313b193-5ee9-4277-8896-4f03cf45e102",
    "metadata": {
     "jupyter": {
@@ -19788,34 +19788,6 @@
     "    std = kps.std(axis=0)\n",
     "    return mean, std\n",
     "\n",
-    "def get_dlc_kp2d(date,cheetah,action,cam):\n",
-    "    anns2d=pd.read_csv(f'data/acino_3d/{date}/{cheetah}/{action}/fte_pw/'+cam.split('.')[0]+'_fte.csv')\n",
-    "    anns2d.columns=anns2d.columns+anns2d.iloc[0] # Make keypoint labels column headers\n",
-    "    anns2d=anns2d.iloc[1:,1:]\n",
-    "\n",
-    "    kp2d=[]\n",
-    "    \n",
-    "    for img in range(len(anns2d)):\n",
-    "        for kp in range(0,len(anns2d.columns),3):\n",
-    "            if math.isnan(float(anns2d.iloc[img,kp])): \n",
-    "                kp2d.append(0)\n",
-    "                kp2d.append(0)\n",
-    "                kp2d.append(bool(0))\n",
-    "            else:\n",
-    "                kp2d.append(float(anns2d.iloc[img,kp]))           \n",
-    "                kp2d.append(float(anns2d.iloc[img,kp+1]))\n",
-    "                kp2d.append(bool(1))\n",
-    "                \n",
-    "    kp2d=np.array(kp2d,dtype=float).reshape(len(anns2d),20,3)\n",
-    "    # calculate bounding boxes,centers,scales\n",
-    "    scale_factor=1.2\n",
-    "    bboxes = np.stack([np.min(kp2d[:, :, 0], axis=1),np.min(kp2d[:, :, 1], axis=1),np.max(kp2d[:, :, 0], axis=1),np.max(kp2d[:, :, 1], axis=1)],axis=1)\n",
-    "    centers = np.stack([(bboxes[:, 0] + bboxes[:, 2]) / 2,(bboxes[:, 1] + bboxes[:, 3]) / 2], axis=1)\n",
-    "    scales = scale_factor * np.max(bboxes[:, 2:] - bboxes[:, :2], axis=1) / 200\n",
-    "    \n",
-    "    return kp2d,centers,scales\n",
-    "\n",
-    "\n",
     "def get_anns_dlc(cam_id, cheetah, action, cam, date, start_frame, end_frame):\n",
     "    ''' Extract frames from each camera and get 2D, 3D annotations'''\n",
     "    \n",
@@ -19866,7 +19838,7 @@
     "    \n",
     "    return imgnames,centers,scales,kp2d,kp3d\n",
     "\n",
-    "def get_anns_res50(cam_id, cheetah, action, cam, date, start_frame, end_frame):\n",
+    "def get_anns_res50(cam_id, cheetah, action, cam, date, start_frame, end_frame, pose_model,det_model):\n",
     "    ''' Calculate centers, scales and estimate 2D keypoints using top-down pose-estimator (pose-detect + '''\n",
     "    \n",
     "    #Save frames\n",
